eks/deployments/istio/1-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v1
  template:
    metadata:
      labels:
        app: app
        version: v1
        istio: monitor
    spec:
      containers:
      - name: app
        image: aputra/myapp-lesson155:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - name: http
          containerPort: 8080
