eks/deployments/istio/6-client-test.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: backend
spec:
  containers:
  - name: client
    image: curlimages/curl:latest
    command: ["/bin/sh", "-c", "--"]
    args: ["while true; do sleep 30; done;"]
    resources:
      limits:
        memory: "100Mi"
        cpu: "100m"
