eks/deployments/istio/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: staging
spec:
  selector:
    app: app
  ports:
    - name: http
      port: 8080
